# CSGraphicsProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
OpenGL/: CMakeLists.txt  glfwExample.cpp
Vulkan/: CMakeLists.txt  glfwVulkan.cpp
examples/: CMakeLists.txt  render.cpp  test_pngWrite.cpp
src/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  READ_ME.txt  Random.cpp  Random.h  camera.cpp  camera.h  handleGraphicsArgs.cpp  handleGraphicsArgs.h  main.cpp  ray.h  render.cpp  shape.h  sphere.cpp  sphere.h
src/frameBuffer/: Framebuffer.cpp  Framebuffer.h
src/render/: render.cpp
src/sketch/: scratchScene.txt  scratchShape.txt
src/vec3/: vec3.h
utests/: CMakeLists.txt  utest_Failure.cpp  utest_Success.cpp  utest_rays.cpp  utest_vec3.cpp
